[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultsync"
version = "0.1.0"
description = "A Python CLI for managing, encrypting, and syncing environment variables across projects and environments."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Officethree Technologies" },
]
keywords = ["env", "secrets", "encryption", "sync", "devops", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
vaultsync = "vaultsync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultsync"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
